[project]
name = "claude-usage-exporter"
version = "0.1.2"
description = "Export Claude Code token usage (per agent/model) to Prometheus, OTLP, or stdout -- parsed from transcripts, works on Max/Pro subscriptions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nikhil Patel", email = "niks999@gmail.com" }]
keywords = [
  "claude",
  "claude-code",
  "anthropic",
  "observability",
  "prometheus",
  "opentelemetry",
  "otlp",
  "llm",
  "tokens",
  "usage",
  "cost",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
otlp = [
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
claude-usage-exporter = "claude_usage_exporter.cli:main"

[project.urls]
Homepage = "https://github.com/niks999/claude-usage-exporter"
Source = "https://github.com/niks999/claude-usage-exporter"
Issues = "https://github.com/niks999/claude-usage-exporter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_usage_exporter"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
